<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:id="@+id/ivItemFruit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/info_family_icon"
            app:srcCompat="@drawable/sauropodomorpha"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="273dp"
            android:layout_height="102dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvItemFruit"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/info_family_name"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_family_desc" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>